@@ -1,0 +1,5 @@
+#summarise <- function (...) {
+#	.Deprecated("summarise", package="vcdExtra")
+#	LRstats(...)
+#}
+#
