@@ -1,6 +1,7 @@
 Version 0.6-4 (2014-11-07)
 
 o Added Cormorants data (fixed to latest)
+o Added LRstats, to replace Summarise. Older summarise() and Summarise() will eventually be deprecated.
 
 
 Version 0.6-3 (2014-10-27)
